<resources>
    <string name="app_name">WeatherAppMVC</string>
    <string name="submit">Submit</string>
    <string name="edittext_longitude_string">Longitude</string>
    <string name="edittext_latitude_string">Latitude</string>
    <string name="viewtext_header_approvedtime">Approved Time:</string>
    <string name="viewtext_header_latitude">Latitude</string>
    <string name="viewtext_header_longitude">Longitude</string>
    <string name="description_weathersituation">description_weathersituation</string>
    <string name="valid_time">Valid Time</string>
    <string name="temperature">Temperature</string>
    <string name="cloudcover">CloudCover</string>
    <string name="viewtext_header_outdated_data">Outdated Data</string>
</resources>