<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="3dp">


    <ImageView
        android:id="@+id/main_weathersituation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/description_weathersituation"
        app:srcCompat="@drawable/day_1" />

    <TextView
        android:id="@+id/main_validtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valid_time"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/main_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/temperature"
        android:textSize="24dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/main_cloudcover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cloudcover"
        android:textSize="12dp"/>

</LinearLayout>